force-app/main/default/objects/et4ae5__MC_CDC_Journey__c/et4ae5__MC_CDC_Journey__c.object-meta.xml
<CustomObject>
    <description>Shows the details of published Journeys that are dependent on CampaignId</description>
    <label>MC CDC Journey</label>
    <nameField>
        <displayFormat>MCCJ-{0000}</displayFormat>
        <label>Journey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MC CDC Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>