force-app/main/default/objects/et4ae5__MC_CDC_Journey__c/fields/et4ae5__ChangeType__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__ChangeType__c</fullName>
    <description>should hold a value of Create, Update, or CreateOrUpdate</description>
    <label>Change Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>