force-app/main/default/objects/et4ae5__MC_CDC_Journey__c/fields/et4ae5__EntityName__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__EntityName__c</fullName>
    <description>Name of the object on which Journey is dependent on</description>
    <label>Entity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>