force-app/main/default/objects/et4ae5__MC_CDC_Journey__c/fields/et4ae5__EventDefinitionKey__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__EventDefinitionKey__c</fullName>
    <description>Event definition key linked to Journey</description>
    <label>Event Definition Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>