force-app/main/default/objects/et4ae5__MC_CDC_Journey__c/fields/et4ae5__FilterFields__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__FilterFields__c</fullName>
    <description>List of fields used in primary filter criteria in case of update</description>
    <label>Filter Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>